--- a/FirstTasksWeb/index.html
+++ b/FirstTasksWeb/index.html
@@ -13,58 +13,44 @@
 
     <a name="top"></a>
 
+    <img src="img/todotoday.logo.png" class="cmpyLogo">
+
     <img src="img/Logo.png" class="logo">
     <h1>'Taking it one day at a time'</h1>
 
     <div class="navBar">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">Story</a>
       <a href="team.html">Meet the Team</a>
       <a href="#download">Download Now!</a>
     </div>
 
-      </h3>
+
+    <video src="vid/firsttaskvid.mp4" class="demoVid" controls></video>
 
 
-    <h2 class="heading">Meet The Team</h2>
 
-      <main class="teamInfo">
-        <label class="teamMBR">
-          <img src="img/isabel.png" class="icon">
-              Isabel Cruz:
-                <p>Project Manager</p>
+      <main class="appScrns">
+        <label class="screen 1">
+          <img src="img/home-screen.png">
+            <h6> Main Page </h6>
         </label>
 
-        <label class="teamMBR">
-          <img src="img/abby.png" class="icon">
-          Abigail Daniel:
-            <p>Graphic Designer</p>
+        <label class="screen 2">
+          <img src="img/work-tsks.png">
         </label>
 
-        <label class="teamMBR">
-          <img src="img/melanie.png" class="icon">
-          Melanie Valledor:
-            <p>UX/UI Designer</p>
+        <label class="screen 3">
+          <img src="img/imp-tsks.png">
         </label>
 
-        <label class="teamMBR">
-          <img src="img/rula.png" class="icon">
-          Rula Alnasiri:
-            <p>Co-Interface Developer/Co-Application Developer</p>
+        <label class="screen 4">
+          <img src="img/home-tsks.png">
         </label>
 
-        <label class="teamMBR">
-          <img src="img/wayne.png" class="icon">
-          Wayne Venpin:
-            <p>Co-Interface Developer/Co-Application Developer</p>
-        </label>
-
-        <label class="teamMBR">
-          <img src="img/keya.png" class="icon">
-          Keya Sanyal:
-            <p>Co-Interface Developer/Co-Application Developer</p>
-        </label>
       </main>
+
+
 
     <button class="bckTop">
       <a href="#top">back to top</a>
