--- a/FirstTasksWeb/about.html
+++ b/FirstTasksWeb/about.html
@@ -14,22 +14,81 @@
 
     <a name="top"></a>
 
+    <img src="img/todotoday.logo.png" class="cmpyLogo">
+<!--
     <img src="img/Logo.png" class="logo">
 
-    <h1>'Taking it one day at a time'</h1>
+    <h1>'Taking it one day at a time'</h1> -->
 
     <div class="navBar">
 
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">Story</a>
       <a href="team.html">Meet the Team</a>
       <a href="#download">Download Now!</a>
 
     </div>
 
-    <h2>About</h2>
+    <h2>OUR STORY</h2>
 
-      <h3>
+      <hr></hr>
+        <img src="img/todotoday.logo.png" class="cmpyLogo2">
+
+      <!-- <hr></hr> -->
+      <!-- About the company -->
+          <h4> ABOUT THE COMPANY </h4>
+
+            <h5>
+
+              To-do Today is a company that focuses on taking everyday one step at a time.
+
+                <p>Allowing you to focus on all the things that you need to-do today!</p>
+
+                <p>We know how stressful it can be looking at a monthly or weekly overview.</p>
+
+                <p>Seeing all the tasks you need to complete across multiple days can really freak some people out.</p>
+
+                <p>We wanted to create an app that mainly focsued on each individual day.</p>
+
+                <p>Seeing all your taks for the day in one spot and also being able to categorize them as well. </p>
+
+            </h5>
+
+      <hr></hr>
+
+
+      <!-- About the app -->
+      <hr></hr>
+
+
+        <img src="img/Logo.png" class="cmpyLogo2">
+          <h4> ABOUT THE APP </h4>
+
+          <h5>
+
+            First tasks is the first app designed by To-do Today!
+
+              <p>Our <strong>main goal</strong> with this app is that we wanted to 'Take one day at a time'.</p>
+
+              <p>We designed this app for those who love working hard but have just too many tasks to complete.</p>
+
+              <p>Seeing all the tasks you need to complete across multiple days can really freak some people out.</p>
+
+              <p>We wanted to create an app that mainly focsued on each individual day.</p>
+
+              <p>Seeing all your taks for the day in one spot and also being able to categorize them as well. </p>
+
+          </h5>
+
+      <hr></hr>
+
+        <!-- <h4> Presents to you: </h4>
+
+        <img src="img/Logo.png" class="firstTsk">
+
+        <h3>
+
+        <br></br>
         <strong>To-do To-day</strong> is a company that focuses on taking everyday one step at a time. Accomplishing what you have to-do today!
 
         <br></br>
@@ -50,7 +109,7 @@
         <br>From there you will be able breakdown all of your first tasks in order to help you know where to start and what you need to do.
         </br>
 
-        </h3>
+        </h3> -->
 
     <button class="bckTop">
       <a href="#top">back to top</a>
