--- a/FirstTasksWeb/index.html
+++ b/FirstTasksWeb/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FED To-Do List</title>
+    <title>First Tasks Website</title>
     <meta name="description" content="Company Website for Firsttasks app">
     <meta name="author" content="First Tasks Web Design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,36 +19,83 @@
     <h1>'Taking it one day at a time'</h1>
 
     <div class="navBar">
-      <a href="index.html">Home</a>
-      <a href="about.html">Story</a>
-      <a href="team.html">Meet the Team</a>
-      <a href="#download">Download Now!</a>
+      <a href="index.html" class="navTab">Home</a>
+      <a href="about.html" class="navTab">Story</a>
+      <a href="team.html" class="navTab">Meet the Team</a>
     </div>
 
+    <a href="#download" class="dlAPP">DOWNLOAD NOW!</a>
 
     <video src="vid/firsttaskvid.mp4" class="demoVid" controls></video>
 
+    <h2 class="heading main">APP SCREEN</h2>
 
-
-      <main class="appScrns">
+      <article class="appScrns">
         <label class="screen 1">
           <img src="img/home-screen.png">
-            <h6> Main Page </h6>
+            <h5> Main Page </h5>
         </label>
 
         <label class="screen 2">
           <img src="img/work-tsks.png">
+            <h5> Work Tasks Page </h5>
         </label>
 
         <label class="screen 3">
           <img src="img/imp-tsks.png">
+            <h5> Important Tasks Page </h5>
         </label>
 
         <label class="screen 4">
           <img src="img/home-tsks.png">
+            <h5> Home Tasks Page </h5>
         </label>
 
-      </main>
+      </article>
+
+        <!-- app features -->
+
+      <h2 class="heading main">FEATURES</h2>
+
+        <article class="appFeatures">
+
+          <label class="feature 1">
+            <img src="img/list-layout.png">
+              <h5><strong>Catergorize your tasks into lists!</strong></h5>
+                <h5> View all your tasks in one place or view them in their specific category</h5>
+          </label>
+
+          <label class="feature 2">
+            <img src="img/list-layout.png">
+              <h5><strong>Focus on one day!</strong></h5>
+                <h5>Only view your tasks for the current day you are on, allowing you to prioritize your daily tasks.</h5>
+          </label>
+
+          <label class="feature 3">
+            <img src="img/list-layout.png">
+              <h5><strong>Focus on one day!</strong></h5>
+                <h5>Only view your tasks for the current day you are on, allowing you to prioritize your daily tasks.</h5>
+          </label>
+
+        </article>
+
+
+          <!-- <label class="screen 2">
+            <img src="img/work-tsks.png">
+              <h5> Work Tasks Page </h5>
+          </label> -->
+
+          <!-- <label class="screen 3">
+            <img src="img/imp-tsks.png">
+              <h5> Important Tasks Page </h5>
+          </label>
+
+          <label class="screen 4">
+            <img src="img/home-tsks.png">
+              <h5> Home Tasks Page </h5>
+          </label> -->
+
+      </article>
 
 
 
