--- a/FirstTasksWeb/team.html
+++ b/FirstTasksWeb/team.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FED To-Do List</title>
+    <title>First Tasks Website</title>
     <meta name="description" content="Company Website for Firsttasks app">
-    <meta name="author" content="First Tasks Web Design">
+    <meta name="Isabel Cruz" content="First Tasks Web Design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css?v=1.0">
@@ -17,19 +17,19 @@
 
     <img src="img/todotoday.logo.png" class="cmpyLogo">
 
-    <img src="img/Logo.png" class="logo">
-    <h1>'Taking it one day at a time'</h1>
+    <!-- <img src="img/Logo.png" class="logo">
+    <h1>'Taking it one day at a time'</h1> -->
 
     <div class="navBar">
       <a href="index.html">Home</a>
       <a href="about.html">Story</a>
       <a href="team.html">Meet the Team</a>
-      <a href="#download">Download Now!</a>
+      <!-- <a href="#download">Download Now!</a> -->
     </div>
 
 <h2 class="heading">MEET THE TEAM</h2>
 
-  <main class="teamInfo">
+  <article class="teamInfo">
     <label class="teamMBR">
       <img src="img/isabel.png" class="icon">
           Isabel Cruz:
@@ -65,7 +65,7 @@
       Keya Sanyal:
         <p>Co-Interface Developer/Co-Application Developer</p>
     </label>
-  </main>
+  </article>
 
 <button class="bckTop">
   <a href="#top">back to top</a>
