--- a/FirstTasksWeb/about.html
+++ b/FirstTasksWeb/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FED To-Do List</title>
+    <title>First Tasks Website</title>
     <meta name="description" content="Company Website for Firsttasks app">
-    <meta name="author" content="First Tasks Web Design">
+    <meta name="Isabel Cruz" content="First Tasks Web Design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css?v=1.0">
@@ -14,22 +14,84 @@
 
     <a name="top"></a>
 
+    <img src="img/todotoday.logo.png" class="cmpyLogo">
+<!--
     <img src="img/Logo.png" class="logo">
 
-    <h1>'Taking it one day at a time'</h1>
+    <h1>'Taking it one day at a time'</h1> -->
 
     <div class="navBar">
 
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">Story</a>
       <a href="team.html">Meet the Team</a>
-      <a href="#download">Download Now!</a>
 
     </div>
 
-    <h2>About</h2>
+    <h2>OUR STORY</h2>
 
-      <h3>
+      <hr></hr>
+        <img src="img/todotoday.logo.png" class="cmpyLogo2">
+
+      <!-- <hr></hr> -->
+      <!-- About the company -->
+          <h4> ABOUT THE COMPANY </h4>
+
+            <h5>
+
+              <strong>To-do Today</strong> is a company that focuses on taking everyday one step at a time.
+
+                <p>Allowing you to focus on all the things that you need to-do today!</p>
+
+                <p>We know how stressful it can be looking at a monthly or weekly overview.</p>
+
+                <p>Seeing all the tasks you need to complete across multiple days can really freak some people out.</p>
+
+                <p>We wanted to create an app that mainly focsued on each individual day.</p>
+
+                <p>Having all your taks for the day in one spot and also being able to categorize them as well. </p>
+
+            </h5>
+
+      <hr></hr>
+
+
+      <!-- About the app -->
+      <hr></hr>
+
+
+        <img src="img/Logo.png" class="cmpyLogo2">
+          <h4> ABOUT THE APP </h4>
+
+          <h5>
+
+            First tasks is the first app designed by To-do Today!
+
+              <p>Our <strong>main goal</strong> with this app is that we wanted to <strong>'Take one day at a time'.</strong></p>
+
+              <p>We designed this app for those who love working hard but have just too many tasks to complete.</p>
+
+              <p>We wanted our users to be able to focus on just one of their busy days at a time.</p>
+
+              <p>Making sure they prioritize all their <strong>first tasks</strong> for the day.</p>
+
+              <p>By creating this app we allow users to focus on all their 'firsts' for the day.</p>
+
+              <p>Completing their first tasks in order to move on to the next (their next day).</p>
+
+          </h5>
+
+      <hr></hr>
+
+        <a href="#download" class="dlAPP">DOWNLOAD NOW!</a>
+
+        <!-- <h4> Presents to you: </h4>
+
+        <img src="img/Logo.png" class="firstTsk">
+
+        <h3>
+
+        <br></br>
         <strong>To-do To-day</strong> is a company that focuses on taking everyday one step at a time. Accomplishing what you have to-do today!
 
         <br></br>
@@ -50,7 +112,7 @@
         <br>From there you will be able breakdown all of your first tasks in order to help you know where to start and what you need to do.
         </br>
 
-        </h3>
+        </h3> -->
 
     <button class="bckTop">
       <a href="#top">back to top</a>
