--- a/FirstTasksWeb/index.html
+++ b/FirstTasksWeb/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FED To-Do List</title>
+    <title>First Tasks Website</title>
     <meta name="description" content="Company Website for Firsttasks app">
     <meta name="author" content="First Tasks Web Design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,58 +13,83 @@
 
     <a name="top"></a>
 
+    <img src="img/todotoday.logo.png" class="cmpyLogo">
+
     <img src="img/Logo.png" class="logo">
     <h1>'Taking it one day at a time'</h1>
 
     <div class="navBar">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="team.html">Meet the Team</a>
-      <a href="#download">Download Now!</a>
+      <a href="index.html" class="navTab">Home</a>
+      <a href="about.html" class="navTab">Story</a>
+      <a href="team.html" class="navTab">Meet the Team</a>
     </div>
 
-      </h3>
+    <a href="#download" class="dlAPP">DOWNLOAD NOW!</a>
 
+    <video src="vid/final_vid.mp4" class="demoVid" controls></video>
 
-    <h2 class="heading">Meet The Team</h2>
+    <h2 class="heading main">APP SCREEN</h2>
 
-      <main class="teamInfo">
-        <label class="teamMBR">
-          <img src="img/isabel.png" class="icon">
-              Isabel Cruz:
-                <p>Project Manager</p>
+      <article class="appScrns">
+        <label class="screen 1">
+          <img src="img/Firsttasks.png">
+            <h5> Main Page </h5>
         </label>
 
-        <label class="teamMBR">
-          <img src="img/abby.png" class="icon">
-          Abigail Daniel:
-            <p>Graphic Designer</p>
+        <label class="screen 2">
+          <img src="img/calendar.png">
+            <h5> Work Tasks Page </h5>
         </label>
 
-        <label class="teamMBR">
-          <img src="img/melanie.png" class="icon">
-          Melanie Valledor:
-            <p>UX/UI Designer</p>
+        <label class="screen 3">
+          <img src="img/newtask.png">
+            <h5> Important Tasks Page </h5>
         </label>
 
-        <label class="teamMBR">
-          <img src="img/rula.png" class="icon">
-          Rula Alnasiri:
-            <p>Co-Interface Developer/Co-Application Developer</p>
-        </label>
+      </article>
 
-        <label class="teamMBR">
-          <img src="img/wayne.png" class="icon">
-          Wayne Venpin:
-            <p>Co-Interface Developer/Co-Application Developer</p>
-        </label>
+        <!-- app features -->
 
-        <label class="teamMBR">
-          <img src="img/keya.png" class="icon">
-          Keya Sanyal:
-            <p>Co-Interface Developer/Co-Application Developer</p>
-        </label>
-      </main>
+      <h2 class="heading main">FEATURES</h2>
+
+        <article class="appFeatures">
+
+          <label class="feature 1">
+              <h5><strong>Catergorize your tasks into lists!</strong></h5>
+                <h5> View all your tasks in one place or view them in their specific category</h5>
+          </label>
+
+          <label class="feature 2">
+              <h5><strong>Focus on one day!</strong></h5>
+                <h5>Only view your tasks for the current day you are on, allowing you to prioritize your daily tasks.</h5>
+          </label>
+
+          <label class="feature 3">
+              <h5><strong>Prioritize your tasks!</strong></h5>
+                <h5>Star all of your important tasks and have them move to the top so you can see your main goals for the day.</h5>
+          </label>
+
+        </article>
+
+
+          <!-- <label class="screen 2">
+            <img src="img/work-tsks.png">
+              <h5> Work Tasks Page </h5>
+          </label> -->
+
+          <!-- <label class="screen 3">
+            <img src="img/imp-tsks.png">
+              <h5> Important Tasks Page </h5>
+          </label>
+
+          <label class="screen 4">
+            <img src="img/home-tsks.png">
+              <h5> Home Tasks Page </h5>
+          </label> -->
+
+      </article>
+
+
 
     <button class="bckTop">
       <a href="#top">back to top</a>
