--- a/FirstTasksWeb/index.html
+++ b/FirstTasksWeb/index.html
@@ -24,7 +24,7 @@
       <a href="team.html" class="navTab">Meet the Team</a>
     </div>
 
-    <a href="#download" class="dlAPP">DOWNLOAD NOW!</a>
+    <a href="https://github.com/Oraganizational-App/revised--firsttasks/raw/master/Firsttasks%20almost%20to%20completion.zip" class="dlAPP">DOWNLOAD NOW!</a>
 
     <video src="vid/final_vid.mp4" class="demoVid" controls></video>
 
